--- a/for_loops.ipynb
+++ b/for_loops.ipynb
@@ -93,19 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-eeb069eee1b4>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-eeb069eee1b4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    V[:,i] = ## Descenso en gradiente que actualiza un columna.\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Para actualizar V\n",
     "\n",
     "for i in range(V.shape[1]):\n",
-    "    V[:,i] = ## Descenso en gradiente que actualiza un renglon.\n",
+    "    V[:,i] = ## Descenso en gradiente que actualiza un columna.\n",
     "\n",
     "# Para actualizar U\n",
     "\n",
     "for i in range(U.shape[0]):\n",
-    "    U[i,:] =  ## DESCENSO EN GRADIENTE para una columna \n",
+    "    U[i,:] =  ## DESCENSO EN GRADIENTE para una renglon \n",
     "\n",
     "    \n",
     "    "
@@ -131,23 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "u.shape[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
