--- a/Prueba_Final.ipynb
+++ b/Prueba_Final.ipynb
@@ -14,6 +14,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.set_printoptions(precision=2, suppress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -128,113 +137,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2879625090143656\n",
+      "3.2654656988256368\n",
       "0\n",
-      "3.223055735879395\n",
+      "12.39564058888798\n",
       "1\n",
-      "6.256539290560777\n",
+      "9.51092239586364\n",
       "2\n",
-      "5.095154614436384\n",
+      "7.60334361830856\n",
       "3\n",
-      "4.21034861744516\n",
+      "6.464995361930703\n",
       "4\n",
-      "3.658229172108443\n",
+      "5.710089484600897\n",
       "5\n",
-      "3.283247536876137\n",
+      "5.166881261174067\n",
       "6\n",
-      "3.0082362820057815\n",
+      "4.752681071016543\n",
       "7\n",
-      "2.794775425355134\n",
+      "4.423427566076934\n",
       "8\n",
-      "2.6221731511313116\n",
+      "4.153522302245535\n",
       "9\n",
-      "2.478388599166877\n",
+      "3.9270156390395914\n",
       "10\n",
-      "2.3559213567347554\n",
+      "3.733395738779496\n",
       "11\n",
-      "2.249820795681168\n",
+      "3.5654140078001664\n",
       "12\n",
-      "2.156657738354692\n",
+      "3.417884916227954\n",
       "13\n",
-      "2.07396067807296\n",
+      "3.2869850123557742\n",
       "14\n",
-      "1.9998894674184868\n",
+      "3.169823310289831\n",
       "15\n",
-      "1.933036995983731\n",
+      "3.064166978590486\n",
       "16\n",
-      "1.872303303657599\n",
+      "2.9682599471216595\n",
       "17\n",
-      "1.8168125618747293\n",
+      "2.8806992935955282\n",
       "18\n",
-      "1.765856472255928\n",
+      "2.8003487841840133\n",
       "19\n",
-      "1.7188545467419316\n",
+      "2.7262770144164388\n",
       "20\n",
-      "1.6753255295086704\n",
+      "2.657712261525403\n",
       "21\n",
-      "1.6348663854772056\n",
+      "2.5940089489400955\n",
       "22\n",
-      "1.5971365584540704\n",
+      "2.5346223431754535\n",
       "23\n",
-      "1.5618459815260808\n",
+      "2.479089192504846\n",
       "24\n",
-      "1.52874581204881\n",
+      "2.427012723628727\n",
       "25\n",
-      "1.4976211795683716\n",
+      "2.378050881402413\n",
       "26\n",
-      "1.468285443949643\n",
+      "2.331907013881933\n",
       "27\n",
-      "1.4405756022032072\n",
+      "2.2883224234141366\n",
       "28\n",
-      "1.414348579872566\n",
+      "2.2470703574338935\n",
       "29\n",
-      "1.3894782111964132\n",
+      "2.207951121296734\n",
       "30\n",
-      "1.3658527610320081\n",
+      "2.170788073744239\n",
       "31\n",
-      "1.3433728768419901\n",
+      "2.1354243226862053\n",
       "32\n",
-      "1.3219498849654843\n",
+      "2.101719981105513\n",
       "33\n",
-      "1.3015043646500328\n",
+      "2.0695498743069964\n",
       "34\n",
-      "1.2819649477875017\n",
+      "2.0388016133964046\n",
       "35\n",
-      "1.2632673032779957\n",
+      "2.0093739678684055\n",
       "36\n",
-      "1.2453532733601949\n",
+      "1.9811754839820754\n",
       "37\n",
-      "1.228170135750989\n",
+      "1.9541233062721786\n",
       "38\n",
-      "1.2116699705063736\n",
+      "1.928142167857694\n",
       "39\n",
-      "1.1958091144958938\n",
+      "1.9031635217326588\n",
       "40\n",
-      "1.1805476895308102\n",
+      "1.879124790378534\n",
       "41\n",
-      "1.165849192691801\n",
+      "1.8559687151354187\n",
       "42\n",
-      "1.151680139409251\n",
+      "1.8336427900477896\n",
       "43\n",
-      "1.1380097514663337\n",
+      "1.8120987675379314\n",
       "44\n",
-      "1.1248096834052692\n",
+      "1.7912922253938544\n",
       "45\n",
-      "1.1120537818841865\n",
+      "1.7711821862932777\n",
       "46\n",
-      "1.099717873405269\n",
+      "1.7517307825028827\n",
       "47\n",
-      "1.0877795765530045\n",
+      "1.7329029595557424\n",
       "48\n",
-      "1.0762181354744131\n",
+      "1.7146662136695794\n",
       "49\n",
-      "1.0650142718251696\n",
+      "1.696990358463238\n",
       "50\n"
      ]
     }
    ],
    "source": [
-    "U,V = CollaborativeFiltering(Y,max_iter=50,k=2,eta=.5,lambd=1) "
+    "U,V = CollaborativeFiltering(Y,max_iter=50,k=10,eta=.5,lambd=1) "
    ]
   },
   {
@@ -325,6 +334,115 @@
    "source": [
     "V"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## notas de santi (no estoy seguro de lo siguiente): \n",
+    "## Multiplicar U y V para obtener la matriz original pero sin nans _ ? \n",
+    "# Eso nos daria nuestras predicciones, que habria que comparar con la matriz original y calcular el ndcg_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matriz_predicciones = U @ V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ -5.49,   1.21,  -1.93, ...,   0.08,   0.23,   0.56],\n",
+       "       [-81.41, -75.8 , -32.42, ...,   1.15,   0.5 ,   3.91],\n",
+       "       [-38.34, -10.7 ,  -2.07, ...,   0.6 ,   0.7 ,   3.09],\n",
+       "       ...,\n",
+       "       [-20.45,   0.42,  -3.1 , ...,   0.33,   0.6 ,   1.85],\n",
+       "       [-43.08, -15.49,  -8.42, ...,   0.82,   0.65,   2.23],\n",
+       "       [-91.88, -16.94,  -1.34, ...,   1.23,   1.81,   2.96]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Matriz_predicciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(671, 9066)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Matriz_predicciones.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Por que hay valores negativos como - 91 ... _??? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import ndcg_score\n",
+    "\n",
+    "#documentacion sobre la metrica:\n",
+    "# https://scikit-learn.org/stable/modules/generated/sklearn.metrics.ndcg_score.html#sklearn.metrics.ndcg_score\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -343,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
