--- a/Entrega_ProyectoFinal.ipynb
+++ b/Entrega_ProyectoFinal.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Integrantes\n",
     "* Santiago\n",
-    "* Jose\n",
+    "* Jose Reyes 142207\n",
     "* Patricia\n",
     "* Yedam Fortiz 119523"
    ]
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,9 +340,9 @@
      "text": [
       "[[ 5. nan  7.]\n",
       " [ 1.  1. nan]]\n",
-      "[[ 4.99114292e+00 -1.49238422e-03  6.99200775e+00]\n",
-      " [ 8.44586362e-01  9.28919502e-01 -9.37683960e-03]]\n",
-      "0.1715759669644307\n"
+      "[[4.99555020e+00 1.23184693e-03 6.99075292e+00]\n",
+      " [9.31499723e-01 9.46896020e-01 3.29064521e-02]]\n",
+      "0.09328441428865487\n"
      ]
     }
    ],
@@ -384,7 +384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47.91649305803306\n"
+      "52.607151334803234\n"
      ]
     }
    ],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -473,17 +473,17 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>5</td>\n",
-       "      <td>0.718625</td>\n",
+       "      <td>0.783511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
-       "      <td>0.919949</td>\n",
+       "      <td>0.889948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>15</td>\n",
-       "      <td>0.996974</td>\n",
+       "      <td>0.986706</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -496,13 +496,13 @@
       ],
       "text/plain": [
        "    k      NDCG\n",
-       "0   5  0.718625\n",
-       "1  10  0.919949\n",
-       "2  15  0.996974\n",
+       "0   5  0.783511\n",
+       "1  10  0.889948\n",
+       "2  15  0.986706\n",
        "3  50  1.000000"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,6 +525,235 @@
    "metadata": {},
    "source": [
     "Como hacer las recomendaciones para las 5 peliculas por usuario"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recomendation_matrix = U_final@V_final.T\n",
+    "\n",
+    "\n",
+    "def recomendacion(user,recomendation_matrix,ratings_features,ratings_values):\n",
+    "    rec_user = recomendation_matrix[user,]\n",
+    "    ratings_user = ratings_values[user,]\n",
+    "    \n",
+    "    not_watched = pd.isnull([x for x in ratings_values[user,]])\n",
+    "    rec_user[np.invert(not_watched)]=np.array([np.nan]*sum(np.invert(not_watched))) \n",
+    "    \n",
+    "    idx_top5=rec_user.argsort()[-5:][::-1]\n",
+    "    print(\"Calificaciones: \",rec_user[idx_top5])\n",
+    "    print(\"Puedes ver las películas: \",ratings_features[idx_top5])\n",
+    "    return list(ratings_features[idx_top5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.43901655, -1.05332333, -1.05329247, -0.94796264, -0.94792357,\n",
+       "       -0.94790737, -0.8941798 , -0.84264954, -0.84258877, -0.84257306,\n",
+       "       -0.83269902, -0.71542291, -0.71529766, -0.70975145, -0.65865881,\n",
+       "       -0.63200059, -0.59245806, -0.56168303, -0.53651635, -0.53650216,\n",
+       "       -0.5348321 , -0.53091839, -0.53089469, -0.49278944, -0.45877199,\n",
+       "       -0.45876059, -0.45867333, -0.39975307, -0.37010071, -0.37007304,\n",
+       "       -0.37005048, -0.36705717, -0.36704267, -0.36695833, -0.3669413 ,\n",
+       "       -0.35770487, -0.32903443, -0.32892995, -0.29354198, -0.29297594,\n",
+       "       -0.2929108 , -0.28780838, -0.28775599, -0.27525604, -0.27522969,\n",
+       "       -0.27521648, -0.2751345 , -0.27019345, -0.25256748, -0.24668872,\n",
+       "       -0.23440356, -0.23439227, -0.2343814 , -0.23437804, -0.23432914,\n",
+       "       -0.234326  , -0.22938833, -0.18366447, -0.18362753, -0.18356816,\n",
+       "       -0.18354837, -0.17580194, -0.17579715, -0.17574809, -0.17322637,\n",
+       "       -0.17286712, -0.13774037, -0.13771212, -0.13769242, -0.13764736,\n",
+       "       -0.13729453, -0.09180244, -0.09177542, -0.05856631, -0.04594778,\n",
+       "       -0.04593355, -0.04589893,  0.00919843,  0.02092369,  0.03074812,\n",
+       "        0.03135007,  0.03143694,  0.04454215,  0.0468376 ,  0.06142477,\n",
+       "        0.06146214,  0.06148805,  0.06150844,  0.06156814,  0.07016335,\n",
+       "        0.07389223,  0.08443251,  0.09219107,  0.09228882,  0.09856409,\n",
+       "        0.0985939 ,  0.10493291,  0.11261711,  0.11266107,  0.11271041,\n",
+       "        0.12286359,  0.12291653,  0.12292824,  0.12294258,  0.12294701,\n",
+       "        0.12295376,  0.12295868,  0.12296677,  0.12298156,  0.12299987,\n",
+       "        0.12302616,  0.12673887,  0.12674613,  0.13352099,  0.14085742,\n",
+       "        0.15021062,  0.15030486,  0.15372245,  0.15374378,  0.15376076,\n",
+       "        0.17265898,  0.1779841 ,  0.17800168,  0.17800447,  0.17803679,\n",
+       "        0.17809342,  0.17813103,  0.18434477,  0.18438164,  0.18438717,\n",
+       "        0.18439827,  0.18440229,  0.18441885,  0.18443026,  0.18443062,\n",
+       "        0.18444419,  0.18445482,  0.1844622 ,  0.18446899,  0.18447601,\n",
+       "        0.18447692,  0.18448252,  0.18449364,  0.18449515,  0.18450094,\n",
+       "        0.18453515,  0.18453554,  0.18772215,  0.1878081 ,  0.21511328,\n",
+       "        0.2151214 ,  0.21516099,  0.21516512,  0.21518755,  0.21519671,\n",
+       "        0.21522605,  0.21526851,  0.21528837,  0.21553546,  0.22180569,\n",
+       "        0.2224738 ,  0.22252512,  0.22253051,  0.22254165,  0.22254781,\n",
+       "        0.22255676,  0.2225809 ,  0.22258274,  0.22258503,  0.22261087,\n",
+       "        0.2226148 ,  0.22262224,  0.22265356,  0.22266604,  0.22529413,\n",
+       "        0.22529618,  0.22532083,  0.22534307,  0.22542032,  0.24585939,\n",
+       "        0.24586554,  0.24586561,  0.2458797 ,  0.24587992,  0.24588372,\n",
+       "        0.24588495,  0.24589173,  0.24589512,  0.24589761,  0.24590134,\n",
+       "        0.24591684,  0.24591861,  0.24594052,  0.24594556,  0.24595632,\n",
+       "        0.24595963,  0.2459781 ,  0.2460158 ,  0.24603202,  0.25884084,\n",
+       "        0.26286996,  0.26287468,  0.26287678,  0.26294956,  0.26376611,\n",
+       "        0.27091164,  0.27349525,  0.27660157,  0.27666101,  0.27667279,\n",
+       "        0.29577948,  0.29579964,  0.3004611 ,  0.30050506,  0.30050549,\n",
+       "        0.30732621,  0.30732686,  0.3074065 ,  0.30741279,  0.3074197 ,\n",
+       "        0.30742858,  0.30743578,  0.30744295,  0.30745608,  0.30745958,\n",
+       "        0.31969372,  0.32917951,  0.33611132,  0.33792722,  0.33798109,\n",
+       "        0.33804427,  0.3380658 ,  0.3455637 ,  0.34558499,  0.34667783,\n",
+       "        0.3596006 ,  0.36244141,  0.36307022,  0.37288491,  0.37555051,\n",
+       "        0.37555306,  0.37555364,  0.37558092,  0.37559211,  0.37561315,\n",
+       "        0.37628216,  0.37945297,  0.38185445,  0.38584203,  0.38958762,\n",
+       "        0.3932803 ,  0.40589257,  0.40690393,  0.40693382,  0.44441921,\n",
+       "        0.44449194,  0.45895869,  0.46837282,  0.46845618,  0.46847458,\n",
+       "        0.48158971,  0.486415  ,  0.49272072,  0.49903861,  0.51701376,\n",
+       "        0.51837277,  0.5183946 ,  0.53904468,  0.54711417,  0.54717063,\n",
+       "        0.54717247,  0.56005633,  0.57032724,  0.57081462,  0.57246427,\n",
+       "        0.60323776,  0.63835957,  0.64550068,  0.64875258,  0.66469582,\n",
+       "        0.67013767,  0.67387528,  0.7295292 ,  0.72957723,  0.73697305,\n",
+       "        0.76130145,  0.76888465,  0.76890113,  0.79306258,  0.8100591 ,\n",
+       "        0.81452175,  0.82081912,  0.82573033,  0.94477974,  0.9957302 ,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         inf,         inf,         inf,         inf,\n",
+       "               inf,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan,         nan,         nan,         nan,         nan,\n",
+       "               nan])"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user=6\n",
+    "rec_user = recomendation_matrix[user,]\n",
+    "ratings_user = ratings_values[user,]\n",
+    "\n",
+    "not_watched = pd.isnull([x for x in ratings_values[user,]])\n",
+    "#rec_user[np.invert(not_watched)]=np.array([np.inf]*sum(np.invert(not_watched))) \n",
+    "\n",
+    "idx_top5=rec_user.argsort()[-5:][::-1]\n",
+    "rec_user.argsort()[-5:][::-1]\n",
+    "rec_user.sort()\n",
+    "rec_user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de Usuario :6\n",
+      "Calificaciones:  [nan nan nan nan nan]\n",
+      "Puedes ver las películas:  [ 380 1231 1198 1210 1220]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[380, 1231, 1198, 1210, 1220]"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user = int(input(\"Número de Usuario :\"))\n",
+    "recomendacion(user,recomendation_matrix,ratings_features,ratings_values)"
    ]
   },
   {
