se realiza grid search y que justifica la seleccion de K y otros parametros y se entrena el mejor modelo

--- a/Entrega_ProyectoFinal.ipynb
+++ b/Entrega_ProyectoFinal.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,9 +340,9 @@
      "text": [
       "[[ 5. nan  7.]\n",
       " [ 1.  1. nan]]\n",
-      "[[4.99555020e+00 1.23184693e-03 6.99075292e+00]\n",
-      " [9.31499723e-01 9.46896020e-01 3.29064521e-02]]\n",
-      "0.09328441428865487\n"
+      "[[4.99430638e+00 5.84931817e-03 6.97960727e+00]\n",
+      " [9.27979575e-01 9.03274389e-01 1.03129001e-01]]\n",
+      "0.1601901098362167\n"
      ]
     }
    ],
@@ -367,150 +367,92 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "U_final,V_final = minimizacion_alternada(ratings_wide,k=10,lambda_=0.1,eta=0.01,epsilon=1e-3)"
+    "## Selección de parámetros "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se realiza un grid search para encontrar los mejores valores de los parámetros, entre ellos, el valor de k, tomando como criterio referencia el error NDCG: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verificaremos el valor del ndcg score para diferentes valores de k y los otros parametros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parametros= { 'k':[5,6,7,8],\n",
+    "            'eta':[0.0001,0.001],\n",
+    "            'lambda':[0.1,0.3,0.5]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grid_search(params):\n",
+    "    values=[]\n",
+    "    for k in params['k']:\n",
+    "        for eta in params['eta']:\n",
+    "            for lambd in params['lambda']:\n",
+    "                U,V = minimizacion_alternada(ratings_wide,k=k,lambda_=lambd,eta=eta,epsilon=1e-3)\n",
+    "                ndcg= ndcg_score(np.nan_to_num(ratings_wide), U@V.T)\n",
+    "                values.append([k,eta,lambd,ndcg])\n",
+    "                #print(k,eta,lambd,ndcg)\n",
+    "    parameters_selection= pd.DataFrame(values, columns=['k','eta','lambda','ndcg'])\n",
+    "    print('best combination of parameters:')\n",
+    "    print(parameters_selection.loc[parameters_selection['ndcg'] == parameters_selection['ndcg'].min()])\n",
+    "    return pd.DataFrame(values, columns=['k','eta','lambda','ndcg'])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "52.607151334803234\n"
+      "best combination of parameters:\n",
+      "   k     eta  lambda      ndcg\n",
+      "2  4  0.0001     0.5  0.625973\n"
      ]
     }
    ],
    "source": [
-    "print(np.linalg.norm(np.nan_to_num(ratings_wide)-U_final@V_final.T))"
+    "parameters_selection= grid_search(parametros)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validacion cruzada"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Justificar la elección de k .\\\n",
-    "Como hacer la validacion cruzada, como implementar el test:\\\n",
-    "    *Ya estimamos el modelo bajo train, que se hace con el test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Verificaremos el valor del ndcg score para diferentes valores de k"
+    "## Entrenamos el modelo con los mejores parámetros encontrados:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "U_a,V_a = minimizacion_alternada(ratings_wide,k=5,lambda_=0.1,eta=0.01,epsilon=1e-3)\n",
-    "U_b,V_b = minimizacion_alternada(ratings_wide,k=10,lambda_=0.1,eta=0.01,epsilon=1e-3)\n",
-    "U_c,V_c = minimizacion_alternada(ratings_wide,k=15,lambda_=0.1,eta=0.01,epsilon=1e-3)\n",
-    "U_d,V_d = minimizacion_alternada(ratings_wide,k=50,lambda_=0.1,eta=0.01,epsilon=1e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ndcga = ndcg_score(np.nan_to_num(ratings_wide), U_a@V_a.T)\n",
-    "ndcgb = ndcg_score(np.nan_to_num(ratings_wide), U_b@V_b.T)\n",
-    "ndcgc = ndcg_score(np.nan_to_num(ratings_wide), U_c@V_c.T)\n",
-    "ndcgd = ndcg_score(np.nan_to_num(ratings_wide), U_d@V_d.T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>k</th>\n",
-       "      <th>NDCG</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.783511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10</td>\n",
-       "      <td>0.889948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15</td>\n",
-       "      <td>0.986706</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>50</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    k      NDCG\n",
-       "0   5  0.783511\n",
-       "1  10  0.889948\n",
-       "2  15  0.986706\n",
-       "3  50  1.000000"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame({\"k\":[5,10,15,50],\n",
-    "             \"NDCG\":[ndcga,ndcgb,ndcgc,ndcgd]})\n",
-    "#[ndcg_score(np.nan_to_num(ratings_wide), U_5@V_5.T)]"
+    "U_final,V_final = minimizacion_alternada(ratings_wide,k=4,lambda_=0.5,eta=0.0001,epsilon=1e-3)"
    ]
   },
   {
@@ -787,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
