--- a/Entrega_ProyectoFinal.ipynb
+++ b/Entrega_ProyectoFinal.ipynb
@@ -107,13 +107,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Por ahora consideraremos únicamente 1500 lineas de ratings, no los 100,000 registros ya que el algoritmo no está optimizado para una base de datos tan grande"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -122,15 +115,6 @@
     "ratings_wide = ratings.pivot_table(index = 'userId',\n",
     "                                   columns = 'movieId',\n",
     "                                   values = 'rating')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ratings_wide,X_test = train_test_split(ratings_wide.head(1500),test_size=0.3,random_state=1234)"
    ]
   },
   {
@@ -183,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Minimizacion Alternada"
+    "### Minimizacion Alternada"
    ]
   },
   {
@@ -193,6 +177,21 @@
    "outputs": [],
    "source": [
     "def gradiente_U (Y,U,V,k,lambda_):\n",
+    "    \"\"\"\n",
+    "    Objetivo:\n",
+    "    Evaluacion de gradiente en matriz U\n",
+    "    \n",
+    "    Insumo:\n",
+    "    Y - Matriz a evaluar\n",
+    "    U - Sentimiento general de cada usuario hacia las peliculas\n",
+    "    V - Como cada una de las peliculas es percibidas por los usuarios\n",
+    "    k - Hiperparametro para obtimizar funcion de costo\n",
+    "    lambda - Hiperparametro de regularizacion\n",
+    "    \n",
+    "    Resultado:\n",
+    "    gradiente - gradiente\n",
+    "    \n",
+    "    \"\"\"\n",
     "    \n",
     "    if k!=1:\n",
     "        U_V = U.dot(V.T)\n",
@@ -215,6 +214,21 @@
    "outputs": [],
    "source": [
     "def gradiente_V (Y,U,V,k,lambda_):\n",
+    "    \"\"\"\n",
+    "    Objetivo:\n",
+    "    Evaluacion de gradiente en matriz V\n",
+    "    \n",
+    "    Insumo:\n",
+    "    Y - Matriz a evaluar\n",
+    "    U - Sentimiento general de cada usuario hacia las peliculas\n",
+    "    V - Como cada una de las peliculas es percibidas por los usuarios\n",
+    "    k - Hiperparametro para obtimizar funcion de costo\n",
+    "    lambda - Hiperparametro de regularizacion\n",
+    "    \n",
+    "    Resultado:\n",
+    "    gradiente - gradiente\n",
+    "    \n",
+    "    \"\"\"\n",
     "    \n",
     "    if k!=1:\n",
     "        U_V = U.dot(V.T)\n",
@@ -237,6 +251,18 @@
    "outputs": [],
    "source": [
     "def dot_na(X,Y):\n",
+    "    \"\"\"\n",
+    "    Objetivo:\n",
+    "    Correccion de NA\n",
+    "    \n",
+    "    Insumo:\n",
+    "    X - Matriz X\n",
+    "    Y - Matriz y\n",
+    "    \n",
+    "    Resultado:\n",
+    "    lista_ - producto punto con correccion de NA\n",
+    "    \n",
+    "    \"\"\"\n",
     "    \n",
     "    n,m = X.shape\n",
     "    lista = []\n",
@@ -256,6 +282,24 @@
    "outputs": [],
    "source": [
     "def descenso_gradiente_U(Y,U,V,k,lambda_,eta,epsilon,maxiter=5000):\n",
+    "    \"\"\"\n",
+    "    Objetivo:\n",
+    "    Descenso en gradiente para U\n",
+    "    \n",
+    "    Insumo:\n",
+    "    Y - Matriz a evaluar\n",
+    "    U - Sentimiento general de cada usuario hacia las peliculas\n",
+    "    V - Como cada una de las peliculas es percibidas por los usuarios\n",
+    "    k - Hiperparametro para obtimizar funcion de costo\n",
+    "    lambda - Hiperparametro de regularizacion\n",
+    "    eta - Tamaño de paso\n",
+    "    epsilon - Criterio de paro\n",
+    "    maxiter - maximo numero de iteraciones del programa\n",
+    "    \n",
+    "    Resultado:\n",
+    "    U_ - optimo para U\n",
+    "    \n",
+    "    \"\"\"\n",
     "    \n",
     "    U_ = U\n",
     "    i = 0 \n",
@@ -280,6 +324,23 @@
    "outputs": [],
    "source": [
     "def descenso_gradiente_V(Y,U,V,k,lambda_,eta,epsilon,maxiter=5000):\n",
+    "    \"\"\"\n",
+    "    Objetivo:\n",
+    "    Descenso en gradiente para V\n",
+    "    \n",
+    "    Insumo:\n",
+    "    Y - Matriz a evaluar\n",
+    "    U - Sentimiento general de cada usuario hacia las peliculas\n",
+    "    V - Como cada una de las peliculas es percibidas por los usuarios\n",
+    "    k - Hiperparametro para obtimizar funcion de costo\n",
+    "    lambda - Hiperparametro de regularizacion\n",
+    "    eta - Tamaño de paso\n",
+    "    epsilon - Criterio de paro\n",
+    "    maxiter - maximo numero de iteraciones del programa\n",
+    "    \n",
+    "    Resultado:\n",
+    "    V_ - optimo para V\n",
+    "    \"\"\"\n",
     "    \n",
     "    V_ = V\n",
     "    i = 0 \n",
@@ -411,14 +472,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### En estos momentos no se consideró el procedimiento de tratamiento especial de los Nulos, ya que el programa tarda mucho tiempo en correr. Por ahora estamos considerando los registros nulos como 0."
+    "\n",
+    "## Estimación para la información de películas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Haremos la estimación para la información de las películas"
+    "En estos momentos no se consideró el procedimiento de tratamiento especial de los Nulos, ya que el programa tarda mucho tiempo en correr, en la programación se encuentra comentada la funcion dot_na.\n",
+    "\n",
+    "Por ahora estamos considerando los registros nulos como 0."
    ]
   },
   {
@@ -488,8 +552,7 @@
     "    parameters_selection= pd.DataFrame(values, columns=['k','eta','lambda','ndcg'])\n",
     "    print('best combination of parameters:')\n",
     "    print(parameters_selection.loc[parameters_selection['ndcg'] == parameters_selection['ndcg'].min()])\n",
-    "    return pd.DataFrame(values, columns=['k','eta','lambda','ndcg'])\n",
-    "        "
+    "    return pd.DataFrame(values, columns=['k','eta','lambda','ndcg'])"
    ]
   },
   {
@@ -694,13 +757,6 @@
    "source": [
     "Recomendar()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
